--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "dev": "node --loader ts-node/esm.mjs ./src/app.ts",
+    "dev:watch": "nodemon",
     "build": "rm -rf ./dist && tsc --project .",
     "start:prod": "yarn build && node ./dist/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,6 +16,7 @@
   "devDependencies": {
     "@types/express": "^4.17.11",
     "@types/node": "^15.3.0",
+    "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
   },
